--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -44,17 +44,17 @@ layout: compress
         var OlvyConfig = {
           organisation: "{{site.olvy_organization}}",
           target: "#olvy-target",
-          type: "modal",
+          type: "{{site.olvy_widget_type}}",
           view: {
-            showSearch: false,
-            compact: false,
+            showSearch: true,
+            compact: true,
             showHeader: true, /* only applies when widget type is embed. you cannot hide header for modal and sidebar widgets */
             showUnreadIndicator: true,
-            unreadIndicatorColor: "#EE6E19FF",
+            unreadIndicatorColor: "#FFA13AFF",
             unreadIndicatorPosition: "top-right"
           }
         };
       </script>
       <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script>
-  </body>
+    </body>
 </html>
