--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -16,7 +16,7 @@ layout: compress
         {%- include footer.html -%}
      <script>
             var options = {
-                classname: 'progress',
+                classname: 'progressline',
                 id: 'my-id'
             };
             var nanobar = new Nanobar( options );
