--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,25 +26,26 @@
 
             </ul>
           </div>
-          <ul class="nav justify-content-end">
+          <!-- <ul class="nav justify-content-end">
               <li class="nav-item">
                 <a class="nav-link" href="{{site.url}}{{site.baseurl}}/get-started">
                    Get Started
                 </a>
-              </li>
+              </li> -->
               <!-- <li class="nav-item">
                   <a class="nav-link" id="olvy-target">
                       What's New
                   </a>
               </li> -->
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                   <a class="nav-link" href="{{site.url}}{{site.baseurl}}/styleguide">
                      Styleguide
                   </a>
                 </li>
             <li class="nav-item">
               <button id="olvy-target" class="btn btn-dark"> What's New </button>
-            </li>
+            </li> -->
+          <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link toggle-search-button" href="#search">
                 <i class="fa fa-search search-icon" aria-hidden="true"></i>
@@ -62,15 +63,15 @@
                   </a>
             </li>
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <input
                 class="nav-link switch"
                 id="theme-toggle"
-                onclick="modeSwitcher() "
+                onclick="modeSwitcher()"
                 type="checkbox"
                 name="checkbox"
               />
-            </li>
+            </li> -->
           </ul>
         </nav>
 
