--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
 {%- include head.html -%}
 <body>
         {%- include header.html -%}
-        <div class="container">
+        <div class="main-container">
             {{ content }}
         </div>
          <div class="col-lg-12" id="newsletter_footer">
@@ -40,7 +40,7 @@ layout: compress
     }
   </script>
      <!-- olvy releases -->
-     <script>
+     <!-- <script>
       var OlvyConfig = {
         organisation: "{{site.olvy_organization}}",
         target: "#olvy-target",
@@ -55,6 +55,6 @@ layout: compress
         }
       };
     </script>
-    <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script>
+    <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script> -->
   </body>
 </html>
