add more margin space to h2 ~ h6

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -190,6 +190,12 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.1;
 }
 
+#blog-post-container {
+  h2, h3, h4, h5, h6 {
+    margin-top: 2rem !important;
+  }
+}
+
 a{
     color: var(--link-color) !important;
 }
