--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -194,6 +194,10 @@ h1, h2, h3, h4, h5, h6 {
   h2, h3, h4, h5, h6 {
     margin-top: 2rem !important;
   }
+
+  h2 {
+    border-bottom: 1px dotted #404040;
+  }
 }
 
 a{
