moved commits to oct branch

--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -39,8 +39,8 @@ layout: compress
       });
     }
   </script>
-      <!-- olvy releases -->
-      <!-- <script>
+      <!-- what's new -->
+       <script>
         var OlvyConfig = {
           organisation: "{{site.olvy_organization}}",
           target: "#olvy-target",
@@ -50,11 +50,11 @@ layout: compress
             compact: true,
             showHeader: true, /* only applies when widget type is embed. you cannot hide header for modal and sidebar widgets */
             showUnreadIndicator: true,
-            unreadIndicatorColor: "#FFA13AFF",
+            unreadIndicatorColor: "#FF8528FF",
             unreadIndicatorPosition: "top-right"
           }
         };
       </script>
-      <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script> -->
+      <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script>
     </body>
 </html>
