--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -43,14 +43,14 @@
       {% include author.html %}
     {% endif %}
   </div>
-  {%- if site.hyvor_talk_website_id -%}
+  {%- if site.disqus_shortname -%}
   <div class="comments">
     {%- include hyvor_comments.html -%}
    </div>
     {%- endif -%}
   <!-- Incomment incase you want to use Disqus
-      <div id="disqus_thread"></div>
    -->
+  <div id="disqus_thread"></div>
 
 
 </article>
