--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -45,7 +45,7 @@
   </div>
   {%- if site.disqus_shortname -%}
   <div class="comments">
-    {%- include hyvor_comments.html -%}
+    {%- include blog_post_comments.html -%}
    </div>
     {%- endif -%}
   <!-- Incomment incase you want to use Disqus
