--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,7 +60,7 @@
             </li> -->
           </ul>
         </nav>
-
+        <div id="progress-bar"></div>
         <!-- Search Form -->
         <div class="search-form-container">
 
