--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,11 +46,10 @@
                         fill="#ff7901" class="header__checkout-fill"></path>
                     </svg>
                     <span class="snipcart-items-count"></span>
-                    <!-- <span class="snipcart-total-price"></span> -->
                   </a>
             </li>
-        -->
-            <!-- <li class="nav-item">
+             -->
+             <li class="nav-item">
               <input
                 class="nav-link switch"
                 id="theme-toggle"
@@ -58,7 +57,7 @@
                 type="checkbox"
                 name="checkbox"
               />
-            </li> -->
+            </li> 
           </ul>
         </nav>
         <div id="progress-bar"></div>
