--- a/_includes/recent_articles.html
+++ b/_includes/recent_articles.html
@@ -1,7 +1,7 @@
 <section id="recent-articles">
   <div id="recent-articles-header">
     <div id="recent-articles-title">
-      <h1 class="card-title">Recent Articles</h1>
+      <h1 class="card-title">Read Some of my Blogs :)</h1>
     </div>
     <div id="recent-articles-show-all">
       <a class="btn btn-lg btn-dark" href="/blog"> View All </a>
