--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
   </div>
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header">Categories</div>
+      <div class="">Categories</div>
       <div class="card-body text-dark">
         {%- include blog_categories.html -%}
       </div>
