setup tailwind base

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -82,10 +82,10 @@
     rel="stylesheet"
     href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css"
   />
-  <link
+  <!-- <link
     rel="stylesheet"
     href="{{site.url}}{{site.baseurl}}/assets/bower_components/bootstrap/dist/css/bootstrap.min.css"
-  />
+  /> -->
   <link
     rel="stylesheet"
     href="{{site.url}}{{site.baseurl}}/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css"
