--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,16 @@
 ---
 ---
+@import "tailwindcss/base";
 
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+/*
 @charset "utf-8";
 
+
 @import "devlopr";
+*/
+
 
 /* custom css goes below */
