--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,16 +1,5 @@
 ---
-layout: full-width
+layout: default
 ---
 
-<script>
-  $(document).ready(function() {
-    $("#typewriteText").typewrite({
-      actions: [{ type: "{{site.typewrite-text}}" }]
-    });
-  });
-</script>
-    <!-- hero section-->
-    {%- include hero.html -%}
-    <div class="col-lg-8 offset-md-2">
-      {%- include recent_articles.html -%}
-    </div>
+Test home
