fix dark mode toggle

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
               $(document.documentElement).removeClass('dark');
               localStorage.setItem('color-theme', 'light');
             } else {
-              $(docuemnt.documentElement).addClass('dark');
+              $(document.documentElement).addClass('dark');
               localStorage.setItem('color-theme', 'dark');
             }
           }
