--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,17 +4,17 @@ layout: default
 
 <div class="flex flex-wrap mx-4 md:mx-10 lg:mx-28 py-24 ">
     <div class="basis-full md:basis-1/3">
-        <div class="w-full max-w-sm rounded-lg border dark:bg-gray-800 dark:border-gray-700 py-12 bg-gradient-to-r from-orange-300 to-rose-300">
+        <div class="w-full max-w-sm rounded-lg border dark:bg-gray-800 dark:border-gray-700 py-12 bg-white">
             <div class="flex flex-col items-center">
                 <img class="mb-3 w-32 h-32 rounded-full" src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" />
-                <h5 class="mb-1 text-xl font-medium text-gray-900">
+                <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">
                     {{ site.author }}
                 </h5>
                 <span class="text-sm text-gray-500 dark:text-gray-400"> Full Stack Web Developer </span>
         
                 <div class="flex flex-col mt-2 space-x-1 md:mt-2">
                     <span class="inline-flex items-center py-2 px-8 text-center">
-                        <a href="mailto:{{ site.author_email }}" class="w-full py-2 m-2 px-4 text-sm font-medium text-blue-800 dark:text-white hover:text-white bg-white ring-1 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-black dark:hover:bg-blue-800">
+                        <a href="mailto:{{ site.author_email }}" class="w-full py-2 m-2 px-4 text-sm font-medium text-blue-800 dark:text-white hover:text-white bg-white ring-1 dark:ring-black rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:bg-black dark:hover:bg-blue-800 dark:focus:ring-black">
                             Hire Me
                         </a> 
 
@@ -48,7 +48,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.twitter_username %}
                             <a
-                              class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-1 px-2 m-2"
+                              class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-1 px-2 m-2"
                               href="http://twitter.com/{{ site.twitter_username }}"
                             >
                               <i class="fab fa-twitter"></i>
@@ -58,7 +58,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.facebook_username %}
                             <a
-                              class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-1 px-2 m-2"
+                              class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-1 px-2 m-2"
                               href="http://facebook.com/{{ site.facebook_username }}"
                             >
                             <i class="fab fa-facebook-f"></i>
@@ -68,7 +68,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                           {% if site.instagram_username %}
                             <a 
-                                class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm px-1.5 py-0.5 m-2"
+                                class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm px-1.5 py-0.5 m-2"
                                 href="http://instagram.com/{{ site.instagram_username }}">
                             <i class="fab fa-instagram"></i>
                             </a>
@@ -77,7 +77,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                           {% if site.medium_username %}
                             <a
-                              class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                              class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                               href="http://medium.com/@{{ site.medium_username }}"
                              >
                              <i class="fab fa-medium-m"></i>
@@ -87,7 +87,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                            {% if site.github_username %}
                             <a
-                              class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                              class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                               href="http://github.com/{{ site.github_username }}"
                             >
                              <i class="fab fa-github"></i>
@@ -99,7 +99,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.behance_username %}
                             <a
-                                class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                                class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                                 href="http://behance.net/{{ site.behance_username }}"
                             >
                             <i class="fab fa-behance"></i>
@@ -108,7 +108,7 @@ layout: default
                         </div>
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.linkedin_username %}
-                            <a class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                            <a class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                                href="http://linkedin.com/in/{{ site.linkedin_username }}">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
@@ -117,7 +117,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.telegram_username %}
                             <a 
-                                class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                                class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                                 href="http://t.me/{{ site.telegram_username }}">
                                 <i class="fab fa-telegram-plane"></i>
                             </a>
@@ -126,7 +126,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.dribbble_username %}
                             <a
-                                class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                                class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                                 href="https://dribbble.com/{{ site.dribbble_username }}"
                             >
                                 <i class="fab fa-dribbble"></i>
@@ -136,7 +136,7 @@ layout: default
                         <div class="w-1/5 h-8 text-center items-center">
                             {% if site.flickr_username %}
                             <a
-                                class="text-gray-500 bg-white bg:text-gray-100 border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
+                                class="text-gray-500 bg-white bg:text-gray-100 dark:bg-black border border-gray-500 border-1 hover:text-black dark:hover:text-white rounded-full w-6 h-6 text-sm py-0.5 px-1.5 m-2"
                                 href="https://www.flickr.com/photos/{{ site.flickr_username }}"
                                 >
                                 <i class="fab fa-flickr"></i>
