update coding activity

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 
     <footer class="p-4 bg-white sm:p-6 dark:bg-gray-800">
         <div class="mx-auto max-w-screen-xl">
-   <!--          <div class="md:flex md:justify-between">
+             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="https://flowbite.com" class="flex items-center">
-                        <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-8" alt="FlowBite Logo" />
-                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                        <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-8" alt="FlowBite Logo" />
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span> -->
                     </a>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
@@ -43,12 +43,12 @@
                         </ul>
                     </div>
                 </div>
-            </div> -->
+            </div> 
             <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
             <div class="sm:flex sm:items-center sm:justify-between">
                 <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
                 </span>
-                <p class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022. Powered by <a href="https://github.com/sujaykundu777/devlopr-jekyll" class="hover:underline">devlopr</a>. All Rights Reserved. Subscribe via
+                <p class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022. Powered by <a href="https://github.com/sujaykundu777/devlopr-jekyll" class="hover:underline">devlopr</a>. Subscribe via
                     <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
                 </p>
                 <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
