--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 {%- include head.html -%}
 <body class="bg-white dark:bg-gray-800">
   {%- include header-tailwind.html -%}
-  <div class="bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 pb-20">
+  <div class="bg-gradient-to-r from-red-200 via-red-300 to-yellow-200">
     {{ content }}
   </div>
   {%- include footer.html -%}
