--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,22 +9,53 @@ layout: default
     </div>
     <!-- coding activity -->
     <div class="basis-full md:basis-1/3">
-        <div class="w-full max-w-sm rounded-lg border dark:bg-gray-800 dark:border-gray-700 py-16 bg-white shadow-lg">
+        <div class="w-full max-w-sm rounded-lg my-4 md:my-0 border dark:bg-gray-800 dark:border-gray-700 py-16 bg-white shadow-lg">
             <h1 class="text-gray-800 dark:text-gray-300 p-4"> Last 7 Days Coding Languages</h1>
             <!-- Languages (wakatime.com) -->
-            <figure>
+            <figure class="p-4">
                 <embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed>
             </figure>
           
         </div>
     </div>
     <div class="basis-full md:basis-1/3">
-        <div class="w-full max-w-sm rounded-lg border dark:bg-gray-800 dark:border-gray-700 py-16 bg-white shadow-lg">
+        <div class="w-full max-w-sm rounded-lg my-4 md:my-0 border dark:bg-gray-800 dark:border-gray-700 py-16 bg-white shadow-lg">
             <h1 class="text-gray-800 dark:text-gray-300 p-4"> Last 7 Days Coding Activity </h1>
             <!-- activity (wakatime.com)-->
-            <figure>
+            <figure class="p-4">
                 <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
             </figure>
+        </div>
+    </div>
+    <!-- projects -->
+    <div class="basis-full max-w-3xl my-4 mx-2">
+        <div class="w-full max-w-screen-xl rounded-lg border dark:bg-gray-800 dark:border-gray-700 py-16 bg-white shadow-lg">
+            <h1 class="text-gray-800 dark:text-gray-300 p-4 text-2xl"> Projects </h1>
+            {% for project in site.author_project_details %}
+                {% if project.visibility == true %}
+                    <div class="flex flex-wrap md:flex-row max-w-screen bg-gray-100 dark:bg-gray-600 rounded-lg border border-gray-200 dark:border-none my-4 mx-4 p-4 shadow-sm">
+                        <div class="md:basis-1/2 border-1 border-gray-500">
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/projects/{{project.project_thumbnail}}" class="shadow-lg rounded-sm"/>
+                        </div>
+                        <div class="md:basis-1/2 border-1 border-gray-200 p-4">
+                            <h4 class="text-xl dark:text-gray-200 text-black text-bold">{{ project.project_title }}</h4>
+                            <h6 class="text-lg  dark:text-gray-200 text-black py-2">{{ project.project_info}}</h6>
+                            <p class="text-lg  dark:text-gray-200 text-black py-2">{{ project.project_description }}</p>
+                            <a href="{{project.project_url}}" class="inline-flex items-center my-4 py-2 px-3 text-sm font-medium text-center text-white bg-gray-700 rounded-lg hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+                                Read more
+                                <svg aria-hidden="true" class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                            </a>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+    <!-- experience -->
+    <div class="basis-full max-w-sm my-4 mx-2 ml-4">
+        <div class="w-full max-w-screen-xl rounded-lg border dark:bg-gray-800 dark:border-gray-700 py-16 px-4 bg-white shadow-lg">
+            <h1 class="text-gray-800 dark:text-gray-300 p-4 text-2xl"> Experience </h1>
+            <h1 class="text-gray-800 dark:text-gray-300 p-4 text-2xl"> Education </h1>
         </div>
     </div>
 </div>
