update mobile menu and readme

--- a/_includes/header-tailwind.html
+++ b/_includes/header-tailwind.html
@@ -108,13 +108,10 @@
   <div class="sm:hidden" id="mobile-menu-dropdown">
     <div class="space-y-1 px-2 pt-2 pb-3 z-30">
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-      <a href="#" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Dashboard</a>
+      {% for i in site.urls %}
+        <a href="{{site.url}}{{site.baseurl}}{{ i.url }}" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">{{ i.text }}</a>
+      {% endfor %}
 
-      <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Team</a>
-
-      <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Projects</a>
-
-      <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Calendar</a>
     </div>
   </div>
 </nav>
