--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -20,6 +20,31 @@ layout: default
           </div>
         </div>
     {% endfor %}
+
+    <nav aria-label="navigate">
+      {% if paginator.total_pages > 1 %}
+      <ul class="inline-flex -space-x-px">
+        {% if paginator.previous_page %}
+        <li>
+          <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="py-2 px-3 ml-0 leading-tight text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+        </li>
+        {% endif %}
+        {% for page in (1..paginator.total_pages) %}
+          {% if page == paginator.page %}
+          <li>
+            <a aria-current="page" href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}" class="py-2 px-3 text-blue-600 bg-blue-50 border border-gray-300 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">{{page}}</a>
+          </li>
+          {% endif %}
+        {% endfor %}
+        {% if paginator.next_page %}
+        <li>
+          <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="py-2 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+        </li>
+      {% endif %}
+       </ul> 
+      {% endif %}
+    </nav>
+
   </div>
   <div class="w-full max-w-sm">
     <div class="bg-white dark:bg-gray-800 p-4 rounded-lg shadow-lg m-2 border border-gray-200">
@@ -38,3 +63,4 @@ layout: default
     </div>  
   </div>
 </div>
+
